[package]
name = "avail-utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
avail-core = { git = "https://github.com/availproject/avail-core", tag = "node-v2220-rc1", features = [ "runtime"] }
csv = "1.1"
sc-state-db = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sc-client-db = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5"}
sc-client-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
subxt = { version = "0.34" }
subxt-signer = "0.34"
avail-subxt = { git = "https://github.com/availproject/avail", tag = "v2.2.2.0-rc1" }
codec = { package = "parity-scale-codec", version = "3.6.1" }
prettytable = "0.10.0"
sp-arithmetic = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", version = "23.0.0" }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
structopt = "0.3.26"
tokio = "1.34.0"
serde = "1.0.197"
serde_json = "1.0.108"
frame-support = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
hex = "0.4.3"
hex-literal = "0.3.4"

# deps for decoding grandpa justifications
sp-consensus-grandpa = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
# deps for verifying seal
sp-consensus-babe = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }

# Dependency `subxt` uses it's own 'version' of sp-core so we need to patch it :)
[patch.crates-io]

sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
